--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.1",
+    "@prisma/client": "^5.2.0",
     "autoprefixer": "^10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
+    "prisma": "^5.2.0",
     "typescript": "^5.2.2"
   }
 }
