--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.4.0",
     "mongodb": "^6.1.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
@@ -21,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0",
+    "swr": "^2.2.2",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
