--- a/package.json
+++ b/package.json
@@ -11,24 +11,21 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^5.2.0",
+    "@types/node": "20.6.0",
+    "@types/react": "18.2.21",
     "autoprefixer": "^10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^10.4.0",
-    "mongodb": "^6.1.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "^8.4.29",
+    "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0",
     "swr": "^2.2.2",
-    "tailwindcss": "^3.3.3"
-  },
-  "devDependencies": {
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
-    "prisma": "^5.2.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   }
 }
