--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "autoprefixer": "^10.4.15",
+    "encoding": "^0.1.13",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^10.4.0",
